--- a/Flutter/app/src/main/res/layout/activity_hashtag_feed.xml
+++ b/Flutter/app/src/main/res/layout/activity_hashtag_feed.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/feed_fragment_holder"
+    android:orientation="vertical"
     tools:context=".ui.main.feed.HashtagFeedActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/hashtag_feed_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        android:text="@string/hashtag_feed_title"
+        android:textSize="25sp" />
+
+    <LinearLayout
+        android:id="@+id/feed_fragment_holder"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" />
+
+
+</LinearLayout>
