--- a/Flutter/app/src/main/res/layout/fragment_story_board.xml
+++ b/Flutter/app/src/main/res/layout/fragment_story_board.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/profile_pic" />
 
     <TextView
-        android:id="@+id/user_handle"
+        android:id="@+id/user_alias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -59,7 +59,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_handle"/>
+        app:layout_constraintTop_toBottomOf="@id/user_alias"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
