--- a/Flutter/app/src/main/res/layout/fragment_status.xml
+++ b/Flutter/app/src/main/res/layout/fragment_status.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
-        android:background="@mipmap/ic_launcher"
+        android:background="@mipmap/ic_flutter_bird_round"
         android:src="@drawable/picture_frame" />
 
     <LinearLayout
