--- a/Flutter/app/src/main/res/layout/fragment_story_board.xml
+++ b/Flutter/app/src/main/res/layout/fragment_story_board.xml
@@ -18,7 +18,7 @@
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_marginTop="40dp"
-        android:background="@mipmap/ic_launcher"
+        android:background="@mipmap/ic_flutter_bird_round"
         android:src="@drawable/picture_frame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
