--- a/Flutter/app/src/main/res/values/colors.xml
+++ b/Flutter/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#47a4f4</color>
+    <color name="colorPrimaryDark">#0d6cd8</color>
     <color name="colorAccent">#D81B60</color>
     <color name="hyperlinkBlue">#0000FF</color>
     <color name="editBlue">#3657fe</color>
