--- a/Flutter/app/src/main/res/layout/fragment_status.xml
+++ b/Flutter/app/src/main/res/layout/fragment_status.xml
@@ -7,12 +7,27 @@
     android:padding="10dp"
     android:orientation="horizontal">
 
-    <ImageView android:id="@+id/status_profile_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:background="@mipmap/ic_flutter_bird_round"
-        android:src="@drawable/picture_frame" />
+
+    <LinearLayout
+        android:id="@+id/status_pro_pic_holder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginRight="10dp">
+
+        <WebView
+            android:id="@+id/status_profile_pic"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
+
+
+    <!--    <ImageView android:id="@+id/status_profile_pic"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginRight="10dp"-->
+<!--        android:background="@mipmap/ic_flutter_bird_round"-->
+<!--        android:src="@drawable/picture_frame" />-->
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,6 +39,13 @@
             android:layout_height="wrap_content"
             android:textColor="@color/hyperlinkBlue"
             android:text="\@Jcool"/>
+
+        <TextView android:id="@+id/status_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10dp"
+            android:layout_marginVertical="5dp"
+            android:text="October 31, 2019"/>
 
         <TextView android:id="@+id/status_message_body"
             android:layout_width="wrap_content"
