Added follow/unfollow button

--- a/Flutter/app/src/main/res/layout/fragment_story_board.xml
+++ b/Flutter/app/src/main/res/layout/fragment_story_board.xml
@@ -92,17 +92,17 @@
         android:id="@+id/button_holder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_alias">
+        app:layout_constraintTop_toBottomOf="@+id/follow_button">
 
         <Button
             android:id="@+id/followers_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:text="@string/story_followers" />
 
         <Button
@@ -240,6 +240,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/story_post_status_button" />
 
+    <Button
+        android:id="@+id/follow_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/story_follow"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_alias" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
