Switched to using fuel and pagenated screens

--- a/Flutter/app/src/main/res/layout/activity_login.xml
+++ b/Flutter/app/src/main/res/layout/activity_login.xml
@@ -7,5 +7,20 @@
     tools:context=".ui.main.login.LoginActivity"
     android:id="@+id/login_fragment_holder">
 
+    <ProgressBar
+        android:id="@+id/login_loading"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/colorPrimaryDark"
+        android:indeterminateTintMode="src_atop"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
