Finished pagenating persons screen

--- a/Flutter/app/src/main/res/layout/fragment_story_board.xml
+++ b/Flutter/app/src/main/res/layout/fragment_story_board.xml
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Joe Cool"
+        tools:text="Joe Cool"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
         android:id="@+id/user_alias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="\@jcool"
+        tools:text="\@jcool"
         android:textColor="@color/hyperlinkBlue"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
