--- a/Flutter/app/src/main/res/layout/fragment_personview.xml
+++ b/Flutter/app/src/main/res/layout/fragment_personview.xml
@@ -4,12 +4,26 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView android:id="@+id/person_profile_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:background="@mipmap/ic_flutter_bird_round"
-        android:src="@drawable/picture_frame" />
+<!--    <ImageView android:id="@+id/person_profile_pic"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginRight="15dp"-->
+<!--        android:background="@mipmap/ic_flutter_bird_round"-->
+<!--        android:src="@drawable/picture_frame" />-->
+
+    <LinearLayout
+        android:id="@+id/peep_list_pic_holder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginRight="15dp">
+
+        <WebView
+            android:id="@+id/peep_list_profile_pic"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
