--- a/Flutter/app/src/main/res/layout/fragment_status.xml
+++ b/Flutter/app/src/main/res/layout/fragment_status.xml
@@ -30,8 +30,9 @@
 <!--        android:src="@drawable/picture_frame" />-->
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minWidth="250dp"
         android:orientation="vertical">
 
         <TextView android:id="@+id/status_handle"
@@ -47,13 +48,14 @@
             android:layout_marginVertical="5dp"
             android:text="October 31, 2019"/>
 
-        <TextView android:id="@+id/status_message_body"
+        <TextView
+            android:id="@+id/status_message_body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:textSize="18sp"
             android:lineSpacingExtra="3sp"
-            android:text="Snoopy is a fictional character, the pet beagle of Charlie Brown in the comic strip Peanuts by Charles M. Schulz. Snoopy is a fictional character, the pet beagle of Charlie Brown in the comic strip Peanuts by Charles M. Schulz. "/>
+            android:text="s"
+            android:textAllCaps="false"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
